public/assets/css/style.css
:root {
  --orange: #f36523;
  --green: #8dc73f;
  --blue: #00adef;
  --yellow: #ffc20f;
}

* {
  margin: 0px;
  padding: 0px;
  font-family: "Lato", sans-serif;
}

body {
  height: 100%;
  width: 100%;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  background-repeat: no-repeat;
  font-family: "Lato", sans-serif;
}
.main-container {
  min-height: 79vh;
}

#home-navbar {
  background-color: var(--orange) !important;
  color: white !important;
}

.nav-link {
  color: white !important;
  font-size: 1.2rem;
}

.nav-link:hover {
  font-weight: bold !important;
}

#logout-btn {
  font-size: large;
}

.welcome-card {
  background-color: var(--orange);
  color: white;
}

.dashboard-card {
  height: 80%;
  color: white;
  background-color: #f3652388 !important;
}

.dashboard-btn {
  background-color: var(--yellow);
}

.dashboard-btn:hover {
  background-color: #ffc30f5b;
}

.jumbotron {
  padding: 1.5rem 1rem;
  margin-bottom: 1rem;
  background-color: #e9ecef;
  border-radius: 0.3rem;
  font-weight: bold;
}

.jumbotron > h1 {
  font-weight: bold;
}

.empty-meals {
  background-color: #e9ecef !important;
}

.dishup-links {
  color: var(--orange);
  font-weight: bold;
}

.dishup-links:hover {
  color: var(--orange);
  font-weight: bold;
}

.add-btn {
  background-color: var(--green);
  border: none;
  color: white;
}

.add-btn:hover {
  background-color: #8cc73f8e;
  border: none;
}

.add-btn:active {
  background-color: #8cc73f8e;
  border: none;
}

.search-title {
  color: var(--orange);
}

.search-btn {
  background-color: var(--yellow);
  border: none;
}

.search-btn:hover,
.search-btn:active {
  background-color: #ffc30f88;
  border: none;
}

.view-btn {
  background-color: var(--orange);
  border: none;
  color: white;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.view-btn-meals {
  background-color: var(--orange);
  border: none;
  color: white;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.delete-btn {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
}

.view-btn:hover,
.view-btn:active {
  background-color: #f36523af;
  border: none;
}

#no-results-header {
  color: var(--orange);
}

.footer {
  background-color: var(--orange);
}

.copyright {
  background-color: rgba(0, 0, 0, 0.2);
}

.btn-link:hover {
  background-color: var(--yellow);
}

.welcome-block {
  background-image: linear-gradient(#f36523, #f28f47);
  border: 5px solid white;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

ol li {
  font-size: 1.5rem;
  list-style-type: none;
}

li {
  font-size: 1.5rem;
}

#welcome-h2 {
  color: white;
  font-weight: bolder;
  font-size: 2.25rem;
  text-shadow: 2px 2px var(--green);
}

.welcome-instructions {
  color: white;
}

.li-span-1 {
  color: var(--green);
  font-weight: bolder;
  font-size: 2.75rem;
  text-shadow: 2px 2px white;
}

.image-container {
  background-image: url("https://images.unsplash.com/photo-1463123081488-789f998ac9c4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
  background-size: cover;
  background-position: 100%;
  opacity: 1;
  position: relative;
  /* height: 100vh; */
  width: 100vw;
}

.text {
  background-color: white;
  border-radius: 5px;
  opacity: 1;
  color: black;
  font-size: 3rem;
  font-weight: bold;
  /* margin: 0 auto; */
  padding: 5px;
  width: 70%;
  text-align: center;
  /* position: absolute; */
  /* top: 30%;
  left: 50%;
  transform: translate(-50%, -50%); */
  mix-blend-mode: screen;
}

